--- a/404.html
+++ b/404.html
@@ -13,6 +13,11 @@
     <link
       rel="stylesheet"
       href="_next/static/css/bedbbe63ad24aea6dcc8.css"
+      type="text/css"
+    />
+    <link
+      rel="stylesheet"
+      href="_next/static/css/bedbbe63ad24aea6dcc8.css"
       data-n-g=""
     />
     <noscript data-n-css=""></noscript>
