--- a/index.html
+++ b/index.html
@@ -4,21 +4,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <meta name="next-head-count" content="2" />
-    <link
-      rel="preload"
-      href="_next/static/css/bedbbe63ad24aea6dcc8.css"
-      as="style"
-    />
-    <link
-      rel="stylesheet"
-      href="_next/static/css/bedbbe63ad24aea6dcc8.css"
-      type="text/css"
-    />
-    <link
-      rel="stylesheet"
-      href="_next/static/css/bedbbe63ad24aea6dcc8.css"
-      data-n-g=""
-    />
+    <link rel="preload" href="./css/style.css" as="style" />
+    <link rel="stylesheet" href="./css/style.css" type="text/css" />
+    <link rel="stylesheet" href="./css/style.css" data-n-g="" />
     <noscript data-n-css=""></noscript>
     <link
       rel="preload"
