--- a/404.html
+++ b/404.html
@@ -7,17 +7,17 @@
     <meta name="next-head-count" content="3" />
     <link
       rel="preload"
-      href="_next/static/css/bedbbe63ad24aea6dcc8.css"
+      href="./css/style.css"
       as="style"
     />
     <link
       rel="stylesheet"
-      href="_next/static/css/bedbbe63ad24aea6dcc8.css"
+      href="./css/style.css"
       type="text/css"
     />
     <link
       rel="stylesheet"
-      href="_next/static/css/bedbbe63ad24aea6dcc8.css"
+      href="./css/style.css"
       data-n-g=""
     />
     <noscript data-n-css=""></noscript>
